--- a/create-simple-devops-project.yml
+++ b/create-simple-devops-project.yml
@@ -20,4 +20,4 @@
       command: docker pull 19051987/simple-devops-image:latest
 
     - name: creating docker container using simple-devops-image
-      command: docker run -d --name simple-devops-container -p 8080:8080 ameintu/simple-devops-image:latest
+      command: docker run -d --name simple-devops-container -p 8080:8080 19051987/simple-devops-image:latest
